:construction: add responsiveNavigation

--- a/dev/style.scss
+++ b/dev/style.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .carousel-cell {
-  width: 33%;
+  width: 33.33%;
   height: 200px;
   margin-right: 10px;
   background: #8C8;
@@ -48,4 +48,8 @@ body {
 
 .mb100 {
   margin-bottom: 100px;
+}
+
+.pt100 {
+  padding-top: 100px;
 }
